# matrix-feed-bot

./: .dockerignore  .gitignore  .mypy.ini  Dockerfile  LICENSE.md  README.md  README.rst  config.toml.example  docker-compose.yaml  matrix_feed_bot.py  pyproject.toml  setup.cfg
matrix_rss_bridge/: __init__.py  main.py  utils.py
