[tool.poetry]
name = "matrix_rss_bridge"
version = "0.1.0"
description = "A bridge for reading RSS feeds in Matrix rooms."
authors = ["Isaac Beverly"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
simplematrixbotlib = "^2.6.3"
reader = "^2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bridge = "matrix_rss_bridge.main:main"
