[metadata]
name = matrix-feed-bot
version = 0.2
url = https://github.com/dreamsorcerer/matrix-feed-bot
description = A bot for reading RSS/Atom feeds in Matrix rooms.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-3.0-only
license_files = LICENSE.md

[options]
python_requires = >=3.11

install_requires =
  aiohttp >= 3.8
  feedparser >= 6
  python-liquid >= 1.5
  simplematrixbotlib >= 2.6
